<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">

        <View
            android:id="@+id/view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/green_light"
            android:layout_below="@+id/main_toolbar"/>

        <include
            layout="@layout/toolbar"
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/fl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view_toolbar"/>

    </RelativeLayout>

    <include
        layout="@layout/navi_main" />

</androidx.drawerlayout.widget.DrawerLayout>


